--- a/src/Pigass/UserBundle/Resources/views/Register/question.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/question.html.twig
@@ -1,6 +1,8 @@
 {% extends 'PigassCoreBundle::layout.html.twig' %}
 
-{% block headline %}Adhésion - questions complémentaires{% endblock %}
+{% block title %}{{ parent() }} - Adhésion - Questions complémentaires{% endblock %}
+
+{% block headline %}Questions complémentaires{% endblock %}
 
 {% block content %}
     {{ form(form) }}
