--- a/src/Pigass/UserBundle/Resources/views/Register/index.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/index.html.twig
@@ -30,13 +30,13 @@
         </li>
     {% endif %}
     {% for question in questions %}
-        <li>
+        <li class="btn btn-sm btn-default">
             <div class="title">{{ question.name }}</div>
             {% if filters['questions'][question.id] is defined %}
                 <div class="item"><a href="{{ path('user_register_filter_remove', {'type': 'questions', 'id': question.id, 'slug': slug}) }}" title="Suprimer le filtre {{ question.name }} : {{ filters['questions'][question.id] }}">{{ filters['questions'][question.id] }}</a></div>
             {% else %}
                 {% for answer in question.more %}
-                    <div class="item"><a href="{{ path('user_register_filter_remove', {'type': 'questions', 'id': question.id, 'value': answer, 'slug': slug}) }}" title="Filtrer par {{ question.name }} : {{ answer }}">{{ answer }}</a></div>
+                    <div class="item"><a href="{{ path('user_register_filter_add', {'type': 'questions', 'id': question.id, 'value': answer, 'slug': slug}) }}" title="Filtrer par {{ question.name }} : {{ answer }}">{{ answer }}</a></div>
                 {% endfor %}
             {% endif %}
         </li>
