Suppression de kparam('title') de sendConfirmationMail

--- a/src/Pigass/UserBundle/Resources/views/Register/confirmation.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/confirmation.html.twig
@@ -1,5 +1,5 @@
 <p>Bonjour,</p>
-<p>L'utilisateur {{ user.emailCanonical }} a été créé sur le site « {{ kparam('title')}} ».</p>
+<p>L'utilisateur {{ user.emailCanonical }} a été créé.</p>
 <p>Pour valider votre inscription, il reste une dernière étape : confirmer votre email en cliquant sur le lien suivant.</p>
 <p><a href="{{ url }}">{{ url }}</a></p>
 <p>Bien confraternellement,
