--- a/src/Pigass/UserBundle/Resources/views/Register/confirmation.txt.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/confirmation.txt.twig
@@ -1,6 +1,6 @@
 Bonjour,
 
-L'utilisateur {{ user.emailCanonical }} a été créé sur le site « {{ kparam('title')}} ».
+L'utilisateur {{ user.emailCanonical }} a été créé.
 
 Pour valider votre inscription, il reste une dernière étape : confirmer votre email en cliquant sur le lien suivant.
 
