--- a/src/Pigass/CoreBundle/Resources/public/css/main.css
+++ b/src/Pigass/CoreBundle/Resources/public/css/main.css
@@ -124,11 +124,12 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 #submenu { padding: 10px; }
 #submenu ul, #submenu li { width: 100%; padding: 5px; }
 #submenu li a, #submenu li a:hover { text-decoration: none; }
-#submenu li.btn-primary a, #submenu li.btn-primary a:hover { color: #fff; }
-#submenu li.btn-danger a, #submenu li.btn-danger a:hover { color: #fff; }
-#submenu li.btn-warning a, #submenu li.btn-warning a:hover { color: #fff; }
-#submenu li.btn-success a, #submenu li.btn-success a:hover { color: #fff; }
-#submenu li.btn-info a, #submenu li.btn-info a:hover { color: #fff; }
+
+.btn-primary a, #submenu .btn-primary a:hover { color: #fff; }
+.btn-danger a, #submenu .btn-danger a:hover { color: #fff; }
+.btn-warning a, .btn-warning a:hover { color: #fff; }
+.btn-success a, .btn-success a:hover { color: #fff; }
+.btn-info a, .btn-info a:hover { color: #fff; }
 
 #footer { padding-top: 10px; font-size: 90%; height: 50px; background-color: #AAAAAA; }
 #footer ul{ padding: 10px; }
