#8 #7 Ajout de Structure.status et prise en compte dans les adhésions

--- a/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
@@ -85,7 +85,7 @@
                         {% endif %}
                     </span>
                     <span class="col-sm-12">
-                        {{ structure.address['number'] }} {{ structure.address['type'] }} {{ structure.address['street'] }}, {{ structure.address['complement'] }}, {{ structure.address['code'] }}, {{ structure.address['city'] }} ({{ structure.address['country'] }})
+                        {{ structure.printableAddress }}
                     </span>
                 </span>
             </li>
