--- a/src/Pigass/UserBundle/Resources/views/Register/join.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/join.html.twig
@@ -3,5 +3,10 @@
 {% block headline %}Adhésion - enregistrement{% endblock %}
 
 {% block content %}
+    <div class="panel panel-default">
+        <div class="panel-body">
+            Vous vous apprêtez à adhérer à {{ structure }} en réglant la cotisation d'un montant de {{ kparam('reg_' ~ structure.slug ~ '_payment') }} €.
+        </div>
+    </div>
     {{ form(form) }}
 {% endblock %}
