Fix #10 gestion des questions complémentaires par structure

--- a/src/Pigass/UserBundle/Resources/views/Register/questionIndex.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/questionIndex.html.twig
@@ -16,6 +16,7 @@
     <ul class="entities list-group">
         {% for question in questions %}
             <li class="entity list-group-item row">
+                {% if is_granted("ROLE_ADMIN") or (question.structure is not null and (is_granted("ROLE_STRUCTURE") and question.structure.slug == slug)) %}
                 <span class="btn-group pull-right">
                     <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown">Actions <span class="caret"></span></button>
                     <ul class="dropdown-menu">
@@ -31,6 +32,7 @@
                         </li>
                     </ul>
                 </span>
+                {% endif %}
 
                 <div class="col-sm-3 title">{{ question.name }}</div>
                 <div class="col-sm-2">{{ question.structure }}</div>
