--- a/src/Pigass/UserBundle/Resources/views/Register/list.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/list.html.twig
@@ -67,7 +67,7 @@
     </ul>
     <ul class="entities list-group">
         {% for membership in memberships %}
-            <li class="list-group-item">
+            <li class="list-group-item row">
                 <span class="btn-group pull-right">
                     <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown">Actions <span class="caret"></span></button>
                     <ul class="dropdown-menu">
