--- a/src/Pigass/UserBundle/Resources/views/Register/confirmation.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/confirmation.html.twig
@@ -3,9 +3,9 @@
     <div class="panel-body">
         <p>Votre inscription sur le site des adhésions de {{ structure.name }} s'est correctement déroulée.</p>
         <p>Votre identifiant de connexion : {{ user.emailCanonical }}</p>
-        <p>Si vous ne retrouvez plus votre mot de passe, <a href="{{ path('fos_user_resetting_request') }}" title="Réinitialiser le mot de passe">demandez à le réinitialiser</a>.</p>
+        <p>Si vous ne retrouvez plus votre mot de passe, <a href="{{ url('fos_user_resetting_request') }}" title="Réinitialiser le mot de passe">demandez à le réinitialiser</a>.</p>
         <p>Il reste une dernière étape pour valider votre inscription sur le site : <a href="{{ url }}" title="Valider l'adress email">confirmer votre email en cliquant sur ce lien</a>.</p>
-        <p>Enfin, si vous ne l'avez déjà fait, vous pourrez adhérer à {{ structure.name }} <a href="{{ path('user_register_join', {'slug': structure.slug}) }}" title="Adhérer à {{ structure.name }}">en réglant votre cotisation</a>.</p>
+        <p>Enfin, si vous ne l'avez déjà fait, vous pourrez adhérer à {{ structure.name }} <a href="{{ url('user_register_join', {'slug': structure.slug}) }}" title="Adhérer à {{ structure.name }}">en réglant votre cotisation</a>.</p>
     </div>
     <div class="panel-footer">Ce message a été généré automatiquement par le portail d'adhésions.</div>
 </div>
