--- a/src/Pigass/UserBundle/Resources/views/Register/printPDF.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/printPDF.html.twig
@@ -7,7 +7,10 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <style>
-            div { padding: 15px; }
+            div { padding: 5px; }
+            div.radio, div.form-group div, label { display: inline-block; }
+            div.form-group { padding: 0; margin: 0; }
+            button, button.btn { display: none; }
             .title {}
             .value { font-weight: bold; }
             .jumbotron { width: 100%; margin: 0; }
@@ -48,11 +51,11 @@
                     {% endif %}
                     <div class="col-xs-12">Je désire adhérer à {{ membership.structure.name }} du {{ membership.payedOn|date('d/m/Y') }} au {{ membership.expiredOn|date('d/m/Y') }}.</div>
                     {% if membership.status == 'paid' %}
-                        <div class="col-xs-12">J'ai déjà réglé la somme de {{ membership.amount }} euros à {{ membership.structure.name }} par {{ membership.method.description }} le {{ membership.payedOn|date('d/m/Y') }}.</div>
+                        <div class="col-xs-12">J'ai déjà réglé la somme de {{ membership.amount }} euros à {{ membership.structure.name }} par {{ membership.method.description|lower }} le {{ membership.payedOn|date('d/m/Y') }}.</div>
                     {% else %}
-                        <div class="col-xs-12">Je règle la somme de {{ membership.amount }} euros à {{ membership.structure.name }} par {{ membership.method.description }}.</div>
+                        <div class="col-xs-12">Je règle la somme de {{ membership.amount }} euros à {{ membership.structure.name }} par {{ membership.method.description|lower }}.</div>
                         <div class="col-xs-12">Le chèque est à libeller à l'ordre de {{ payableTo }} et à retourner à l'adresse {{ address }}.</div>
-                        <div class="col-xs-12">Pour un paiement par virement, veuillez contacter la structure pour effectuer le virement.</div>
+                        <div class="col-xs-12">Pour un paiement par virement, veuillez contacter la structure.</div>
                     {% endif %}
                 </div>
                 <div class="panel-footer jumbotron row">
