--- a/src/Pigass/CoreBundle/Resources/public/css/main.css
+++ b/src/Pigass/CoreBundle/Resources/public/css/main.css
@@ -140,6 +140,7 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 #footer .miniature img{ vertical-align: middle; }
 #footer form{ margin: 10px 0; color: #5f6364; }
 
+.logo { max-width: 60px; max-height: 40px; }
 .error_list{ color: red; }
 .flash_notice{ margin: 3px 0; padding: 7px; background-color: #cfc; }
 .flash_error{ margin: 3px 0; padding: 7px; background-color: #f33; color: #fff; }
