--- a/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
@@ -61,7 +61,7 @@
 
                 <span class="col-sm-1">
                     {% if structure.logo is not null %}
-                        <img src="{{ asset('uploads/' ~ structure.logo) }}" alt="{{ structure.logo }}" />
+                        <img src="{{ asset('uploads/' ~ structure.logo) }}" alt="{{ structure.logo }}" class="logo"/>
                     {% endif %}
                 </span>
                 <span class="col-sm-10">
