Class row pour la liste des gateways

--- a/src/Pigass/UserBundle/Resources/views/Payment/index.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Payment/index.html.twig
@@ -19,7 +19,7 @@
 {% block content %}
     <ul class="entities gateways list-group">
         {% for gateway in gateways %}
-            <li class="entity gateway list-group-item">
+            <li class="entity gateway list-group-item row">
                 <span class="btn-group pull-right">
                     <button class="btn btn-primary dropdown-toogle" data-toggle="dropdown">Actions <span class="caret"></span></button>
                     <ul class="dropdown-menu">
