--- a/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
+++ b/src/Pigass/CoreBundle/Resources/views/Structure/index.html.twig
@@ -20,7 +20,9 @@
 
 {% block content %}
     {% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-        <div>Pour adhérer, veuillez cliquer sur la structure de votre région, et vous enregistrer en 3 étapes : validation du formulaire, confirmation de l'adresse e-mail et paiement de la cotisation.</div>
+        <div class="panel panel-primary">
+            <div class="panel-heading">Pour adhérer, veuillez cliquer sur la structure de votre région, et vous enregistrer en 3 étapes : validation du formulaire, confirmation de l'adresse e-mail et paiement de la cotisation.</div>
+        </div>
     {% endif %}
 
     <ul class="entities structures list-group">
