--- a/src/Pigass/UserBundle/Resources/views/Register/join.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/join.html.twig
@@ -3,8 +3,8 @@
 {% block headline %}Adhésion - enregistrement{% endblock %}
 
 {% block content %}
-    <div class="panel panel-default">
-        <div class="panel-body">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
             Vous vous apprêtez à adhérer à {{ structure }} en réglant la cotisation d'un montant de {{ kparam('reg_' ~ structure.slug ~ '_payment') }} €.
         </div>
     </div>
