Ajout du lien vers la fiche d'adhésion

--- a/src/Pigass/UserBundle/Resources/views/Payment/confirmPayment.txt.twig
+++ b/src/Pigass/UserBundle/Resources/views/Payment/confirmPayment.txt.twig
@@ -5,8 +5,10 @@ Votre paiement à {{ membership.structure.name }} a été reçu.
 
     {{ membership.structure.name }}
     {{ membership.structure.PrintableAddress(true) }}
+
+Pour récupérer la fiche d'adhesion : {{ absolute_url(path('user_register_print', {'id': membership.id})) }}
 {% else %}
-    L'adhésion a été complètement validée le {{ membership.payedOn|date('d-m-Y') }}.
+L'adhésion a été complètement validée le {{ membership.payedOn|date('d-m-Y') }}.
 {% endif %}
 
 Ce message a été généré automatiquement par le portail d'adhésions.
