--- a/src/Pigass/UserBundle/Resources/views/Payment/confirmMember.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Payment/confirmMember.html.twig
@@ -8,7 +8,7 @@
             <p>Une fois votre paiement de {{ kparam('reg_' ~ membership.structure.slug ~ '_payment') }} € reçu, votre adhésion pourra être validée.</p>
         {% endif %}
         {% if kparam('reg_' ~ membership.structure.slug ~ '_print') %}
-            <p>Pour finaliser votre adhésion il faut encore que vous renvoyiez la fiche d'adhésion préremplie signée à :</p>
+        <p>Pour finaliser votre adhésion il faut encore que vous renvoyiez <a href="{{ absolute_url(path('user_register_print', {'id': membership.id})) }}">la fiche d'adhésion préremplie signée</a> à :</p>
             <p class="centered">{{ membership.structure.name }}
                 <br/>{{ membership.structure.PrintableAddress(true) }}
             </p>
