--- a/src/Pigass/UserBundle/Resources/views/Payment/confirmMember.txt.twig
+++ b/src/Pigass/UserBundle/Resources/views/Payment/confirmMember.txt.twig
@@ -14,8 +14,10 @@ L'adhésion à {{ membership.structure.name }} jusqu'au {{ membership.expiredOn|
     {{ membership.structure.name }}
     {{ membership.structure.PrintableAddress(false) }}
 
+Pour récupérer la fiche d'adhesion : {{ absolute_url(path('user_register_print', {'id': membership.id})) }}
+
 {% elseif membership.status == 'validated' %}
-    L'adhésion a été complètement validée le {{ membership.payedOn|date('d-m-Y') }}.
+L'adhésion a été complètement validée le {{ membership.payedOn|date('d-m-Y') }}.
 {% endif %}
 
 Ce message a été généré automatiquement par le portail d'adhésions.
