--- a/src/Pigass/UserBundle/Resources/views/Payment/confirmPayment.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Payment/confirmPayment.html.twig
@@ -2,7 +2,7 @@
     <div class="panel-header">Votre paiement à {{ membership.structure.name }} a été reçu.</div>
     <div class="panel-body">
         {% if print %}
-            <p>Pour finaliser votre adhésion il faut encore que vous renvoyiez la fiche d'adhésion préremplie signée à :</p>
+            <p>Pour finaliser votre adhésion il faut encore que vous renvoyiez <a href="{{ absolute_url(path('user_register_print', {'id': membership.id})) }}">la fiche d'adhésion préremplie signée</a> à :</p>
             <p class="centered">{{ membership.structure.name }}
                 <br/>{{ membership.structure.PrintableAddress(true) }}
             </p>
