--- a/src/Pigass/CoreBundle/Resources/public/css/main.css
+++ b/src/Pigass/CoreBundle/Resources/public/css/main.css
@@ -124,6 +124,7 @@ div.flasherror, div.flashnotice { padding: 2px 10px 2px 10px; width: auto; font-
 #submenu { padding: 10px; }
 #submenu ul, #submenu li { width: 100%; padding: 5px; }
 #submenu li a, #submenu li a:hover { text-decoration: none; }
+#submenu li.panel { list-style: none; margin: 0; font-size: 1.1em; text-align: justify; line-height: 1.4em; }
 
 .btn-primary a, #submenu .btn-primary a:hover { color: #fff; }
 .btn-danger a, #submenu .btn-danger a:hover { color: #fff; }
