--- a/src/Pigass/UserBundle/Resources/views/Register/register.html.twig
+++ b/src/Pigass/UserBundle/Resources/views/Register/register.html.twig
@@ -2,11 +2,14 @@
 
 {% block headline %}Adhésion - enregistrement{% endblock %}
 
-{% block content %}
-    <div class="panel panel-primary">
+{% block action %}
+    <li class="panel panel-primary">
         <div class="panel-heading">
             Pour s'inscrire au site et pouvoir adhérer à {{ structure }}, il est nécessaire d'indiquer des coordonnées postales, e-mail et téléphoniques ainsi que quelques informations d'état-civil. Ces informations sont nécessaires au fonctionnement interne de {{ structure }} qui s'engage à ne pas les diffuser à quelque tiers que ce soit sans votre consentement exprès. Nous vous recommandons d'indiquer vos coordonnées professionnelles ici.
         </div>
-    </div>
+    </li>
+{% endblock %}
+
+{% block content %}
     {{ form(form) }}
 {% endblock %}
